<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#186085"
    tools:context="sametileri.project.activitys.RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:background="#FFFF">

        <TextView
            android:text="@string/app_name"
            android:gravity="center"
            android:background="#186085"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" />

        <TextView
            android:text="Hesap Oluştur"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#43576f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" />

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="2dp"
            android:background="#186085" />


        <LinearLayout
            android:orientation="horizontal"
            android:background="@drawable/layoutborder"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/user2"
                android:id="@+id/imageView" />

            <LinearLayout
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/Name"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView14" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:padding="@dimen/textPadding"
                    android:background="@drawable/backwithborder"
                    android:id="@+id/etName" />

                <TextView
                    android:text="@string/Surname"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView15" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:padding="@dimen/textPadding"
                    android:background="@drawable/backwithborder"
                    android:id="@+id/etSurname" />

                <TextView
                    android:text="@string/Statu"
                    android:textStyle="italic"
                    android:textColor="#000000"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView16" />

                <RadioGroup
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:text="Çiftci"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioFarmer"
                        android:layout_weight="1"
                        android:onClick="onRadioButtonClicked"/>

                    <RadioButton
                        android:text="Ziraatci"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioZiraat"
                        android:layout_weight="1"
                        android:onClick="onRadioButtonClicked"/>
                </RadioGroup>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

                <TextView
                    android:text="@string/Username"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:padding="@dimen/textPadding"
                    android:background="@drawable/backwithborder"
                    android:id="@+id/etUserName" />

                <TextView
                    android:text="@string/Password"
                    android:textStyle="italic"
                    android:textColor="#000000"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textVisiblePassword"
                android:padding="@dimen/textPadding"
                android:background="@drawable/backwithborder"
                android:id="@+id/etPassword" />

        </LinearLayout>

        <Button
            android:textAllCaps="false"
            android:text="Tarla Seç"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:background="#43576f"
            android:layout_margin="2dp"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:id="@+id/btnFieldChoice"
            android:onClick="fieldChoice" />

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/fields"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>

        <Button
            android:textAllCaps="false"
            android:text="Kaydi Tamamla"
            android:textColor="#FFFFFF"
            android:background="#43576f"
            android:layout_margin="2dp"
            android:textSize="20sp"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:id="@+id/btnRegister"
            android:onClick="fieldChoice" />

    </LinearLayout>


</ScrollView>
